syntax = "proto3";

option csharp_namespace = "ClinicService.Protos";
// https://github.com/protocolbuffers/protobuf/blob/main/src/google/protobuf/wrappers.proto
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service ConsultationService {

	rpc CreateConsultation (CreateConsultationRequest) returns (CreateConsultationResponse);

	rpc UpdateConsultation (UpdateConsultationRequest) returns (UpdateConsultationResponse);

	rpc DeleteConsultation (DeleteConsultationRequest) returns (DeleteConsultationResponse);

	rpc GetConsultationById (GetConsultationByIdRequest) returns (ConsultationResponse);

	rpc GetConsultations (GetConsultationsRequest) returns (GetConsultationsResponse);

}

message CreateConsultationRequest {
    string description = 1; 
    google.protobuf.Timestamp consultationDate = 2;
    int32 clientId = 3;
    int32 petId = 4;
}

message CreateConsultationResponse {
	google.protobuf.Int32Value consultationId = 1;
	int32 errCode = 2;
    string errMessage = 3;

}

message UpdateConsultationRequest {
    int32 consultationId = 1;
    string description = 2; 
    google.protobuf.Timestamp consultationDate = 3;
    int32 clientId = 4;
    int32 petId = 5;
}

message UpdateConsultationResponse {
	int32 errCode = 1;
    string errMessage = 2;
}

message DeleteConsultationRequest {
    int32 consultationId = 1;
}

message DeleteConsultationResponse {
	int32 errCode = 1;
    string errMessage = 2;
}

message GetConsultationByIdRequest {
    int32 consultationId = 1;
}

message GetConsultationByIdResponse {
    ConsultationResponse consultation = 1;
    int32 errCode = 2;
    string errMessage = 3;
}

message GetConsultationsRequest{

}

message GetConsultationsResponse{
    repeated ConsultationResponse consultations = 1;
    int32 errCode = 2;
    string errMessage = 3;
}

message ConsultationResponse {
	int32 consultationId = 1;
    string description = 2; 
    google.protobuf.Timestamp consultationDate = 3;
    int32 clientId = 4;
    int32 petId = 5;
}